Added Map controls

--- a/polisen-se.ipynb
+++ b/polisen-se.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "'https://polisen.se/api/events?DateTime=2019-04&type=Stöld&locationname=Stockholm;Göteborg;Malmö;Uppsala'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 6,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "2  https://polisen.se/aktuellt/handelser/2019/apr...  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "2  https://polisen.se/aktuellt/handelser/2019/apr...  59.329324  18.068581  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "2  https://polisen.se/aktuellt/handelser/2019/apr...  59.329324  18.068581  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
        "'https://polisen.se/api/policestations'"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -6464,7 +6464,7 @@
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 15,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -6487,7 +6487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6498,7 +6498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -6528,8 +6528,6 @@
        "      <th>location.name</th>\n",
        "      <th>name</th>\n",
        "      <th>services</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -6541,8 +6539,6 @@
        "      <td>N Strömgatan 8, Alingsås</td>\n",
        "      <td>Alingsås</td>\n",
        "      <td>[{'name': 'Anmälan'}, {'name': 'Cyklar'}, {'na...</td>\n",
-       "      <td>57.930105</td>\n",
-       "      <td>12.529608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -6552,8 +6548,6 @@
        "      <td>Värendsgatan 14, Alvesta</td>\n",
        "      <td>Alvesta</td>\n",
        "      <td>[{'name': 'Anmälan'}, {'name': 'Hittegods'}]</td>\n",
-       "      <td>56.900514</td>\n",
-       "      <td>14.555233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -6563,8 +6557,6 @@
        "      <td>Stigbergsvägen 11, Aneby</td>\n",
        "      <td>Aneby</td>\n",
        "      <td>[{'name': 'Anmälan'}, {'name': 'Hittegods'}]</td>\n",
-       "      <td>57.836076</td>\n",
-       "      <td>14.807909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -6574,8 +6566,6 @@
        "      <td>Järntorget 8, Arboga</td>\n",
        "      <td>Arboga</td>\n",
        "      <td>[{'name': 'Anmälan'}, {'name': 'Hittegods'}, {...</td>\n",
-       "      <td>59.39417</td>\n",
-       "      <td>15.840519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -6585,8 +6575,6 @@
        "      <td>Tingsbacka, Storgatan 20   , Arjeplog</td>\n",
        "      <td>Arjeplog</td>\n",
        "      <td>[{'name': 'Anmälan'}, {'name': 'Cyklar'}, {'na...</td>\n",
-       "      <td>66.052216</td>\n",
-       "      <td>17.893128</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6607,15 +6595,15 @@
        "3   59.39417,15.840519                   Järntorget 8, Arboga    Arboga   \n",
        "4  66.052216,17.893128  Tingsbacka, Storgatan 20   , Arjeplog  Arjeplog   \n",
        "\n",
-       "                                            services   Latitude  Longitude  \n",
-       "0  [{'name': 'Anmälan'}, {'name': 'Cyklar'}, {'na...  57.930105  12.529608  \n",
-       "1       [{'name': 'Anmälan'}, {'name': 'Hittegods'}]  56.900514  14.555233  \n",
-       "2       [{'name': 'Anmälan'}, {'name': 'Hittegods'}]  57.836076  14.807909  \n",
-       "3  [{'name': 'Anmälan'}, {'name': 'Hittegods'}, {...   59.39417  15.840519  \n",
-       "4  [{'name': 'Anmälan'}, {'name': 'Cyklar'}, {'na...  66.052216  17.893128  "
+       "                                            services  \n",
+       "0  [{'name': 'Anmälan'}, {'name': 'Cyklar'}, {'na...  \n",
+       "1       [{'name': 'Anmälan'}, {'name': 'Hittegods'}]  \n",
+       "2       [{'name': 'Anmälan'}, {'name': 'Hittegods'}]  \n",
+       "3  [{'name': 'Anmälan'}, {'name': 'Hittegods'}, {...  \n",
+       "4  [{'name': 'Anmälan'}, {'name': 'Cyklar'}, {'na...  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6626,7 +6614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6635,7 +6623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6644,7 +6632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6665,13 +6653,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5420102f49849509ae9a36a148bedfe",
+       "model_id": "59e19eb4ee20483ebe61b5e6ec11f985",
        "version_major": 2,
        "version_minor": 0
       },
@@ -6684,14 +6672,15 @@
     }
    ],
    "source": [
-    "from ipyleaflet import Marker\n",
+    "from ipyleaflet import Map, basemaps, WidgetControl, Marker\n",
+    "from ipywidgets import  link\n",
     "m = Map(center=(63, 14), zoom=4, basemap=basemaps.Stamen.Terrain)\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6704,7 +6693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6715,7 +6704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
