--- a/polisen-se.ipynb
+++ b/polisen-se.ipynb
@@ -6637,27 +6637,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-37-89b82680ec58>:3: FutureWarning: pandas.io.json.json_normalize is deprecated, use pandas.json_normalize instead\n",
-      "  dfPolisStations = json_normalize(dataPolisStation)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pandas.io.json import json_normalize\n",
+    "from pandas import json_normalize\n",
     "dfPolisStations = json_normalize(dataPolisStation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -6762,7 +6753,7 @@
        "4  Tingsbacka, Storgatan 20   , Arjeplog  66.052216,17.893128  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6773,7 +6764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6782,7 +6773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6791,7 +6782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -10795,23 +10786,23 @@
     "        \n",
     "    # add this feature to the list of features inside our dict\n",
     "    geojson['features'].append(feature)\n",
-    "print(json.dumps(geojson, indent=2))"
+    "#print(json.dumps(geojson, indent=2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e50ff88ec4e94c5aa76a257b851171c1",
+       "model_id": "acef9ac2a4de4c73b07941d1a6844262",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[63, 14], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
+       "Map(center=[59.3, 18.3], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out…"
       ]
      },
      "metadata": {},
@@ -10819,15 +10810,35 @@
     }
    ],
    "source": [
-    "from ipyleaflet import Map, basemaps, WidgetControl, Marker\n",
-    "from ipywidgets import  link\n",
-    "m = Map(center=(63, 14), zoom=4, basemap=basemaps.Stamen.Terrain)\n",
+    "from ipyleaflet import * \n",
+    "m = Map(center=(59.3,18.3), zoom=10)\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10837,43 +10848,6 @@
     "m.add_layer(geo_json)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Put a FullScreenContrl on the map\n",
-    "from ipyleaflet import Map, FullScreenControl\n",
-    "m.add_control(FullScreenControl())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipyleaflet import Map, basemaps, WidgetControl\n",
-    "from ipywidgets import  link\n",
-    "minimap = Map(\n",
-    "    zoom_control=False, attribution_control=False, \n",
-    "    zoom=5, center=m.center\n",
-    ")\n",
-    "minimap.layout.width = '150px'\n",
-    "minimap.layout.height = '150px'\n",
-    "link((minimap, 'center'), (m, 'center'))\n",
-    "minimap_control = WidgetControl(widget=minimap, position='bottomleft')\n",
-    "m.add_control(minimap_control)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
