--- a/polisen-se.ipynb
+++ b/polisen-se.ipynb
@@ -6793,13 +6793,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
+   "execution_count": 111,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8867970aa84a42379816e2e0d5603ab9",
+       "model_id": "5f8a4943a9ce449d84360b3a35feee20",
        "version_major": 2,
        "version_minor": 0
       },
@@ -6812,11 +6814,18 @@
     }
    ],
    "source": [
-    "from ipyleaflet import * \n",
-    "m = Map(center=(59.3,18.3), zoom=4)\n",
+    "from import * \n",
+    "m = Map(center=(59.3,18.3), zoom=6)\n",
     "geo_json = GeoJSON(data=geojsonPolice, style = {'color': 'green', 'opacity':1, 'weight':1.9, 'dashArray':'9', 'fillOpacity':0.1})\n",
     "m.add_layer(geo_json)\n",
     "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](OutputPolice.png \"Output\")"
    ]
   },
   {
