--- a/polisen-se.ipynb
+++ b/polisen-se.ipynb
@@ -360,6 +360,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fundering: location.name  \n",
+    "Borde inte Stockholm definieras samma som\n",
+    "* Stockulms stad\n",
+    "* Stockholms län etc...\n",
+    "\n",
+    "Större tydlighet typ av brott och område skulle kunna göra att data kan jämföras mellan olika delar av världen och se hur olika brpttsbekämpande åtgärder påverkar...\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
