--- a/polisen-se.ipynb
+++ b/polisen-se.ipynb
@@ -365,10 +365,17 @@
    "source": [
     "### Fundering: location.name  \n",
     "Borde inte Stockholm definieras samma som\n",
-    "* Stockulms stad\n",
+    "* Stockholms stad samma som\n",
+    "* Stockholms kommun samma som\n",
+    "  * WD [Q506250](https://www.wikidata.org/wiki/Q506250)\n",
+    "  * OSM [relation/398021](https://www.openstreetmap.org/relation/398021)\n",
     "* Stockholms län etc...\n",
+    "  * WD [Q104231](https://www.wikidata.org/wiki/Q104231)\n",
+    "  * OSM [relation/54391](https://www.openstreetmap.org/relation/54391)\n",
+    "* Stockholms stad\n",
+    "  * WD [Q10680648](https://www.wikidata.org/wiki/Q10680648)\n",
     "\n",
-    "Större tydlighet typ av brott och område skulle kunna göra att data kan jämföras mellan olika delar av världen och se hur olika brpttsbekämpande åtgärder påverkar...\n"
+    "Större tydlighet av typ av brott och område skulle kunna göra att data kan jämföras mellan olika delar av världen och se hur olika brottsbekämpande åtgärder påverkar...\n"
    ]
   },
   {
