--- a/polisen-se.ipynb
+++ b/polisen-se.ipynb
@@ -364,8 +364,11 @@
    "metadata": {},
    "source": [
     "### Fundering: location.name  \n",
-    "Borde inte Stockholm definieras samma som\n",
-    "* Stockholms stad samma som\n",
+    "<img src=\"https://lh3.googleusercontent.com/proxy/hhi7b1vd1fbQOMHxZHBdf76Mw_TknDUP2FwQ-c2qsHz7wf0xYadeCaAa9WnYqrr038UnkKRjlM59WtC9-Id7Arc5Mxer2q-3Wi-We-t4bFl8zepLO3EHd4U\" \n",
+    "alt=\"Varning\" width=\"50\" height=\"50\" border=\"10\" align=\"left\"/> Borde inte polisen vara tydligare med område som rapporteras om man skall kunna ha vettig statistik.... \n",
+    "\n",
+    "\n",
+    "\n",
     "* Stockholms kommun samma som\n",
     "  * WD [Q506250](https://www.wikidata.org/wiki/Q506250)\n",
     "  * OSM [relation/398021](https://www.openstreetmap.org/relation/398021)\n",
@@ -375,7 +378,11 @@
     "* Stockholms stad\n",
     "  * WD [Q10680648](https://www.wikidata.org/wiki/Q10680648)\n",
     "\n",
-    "Större tydlighet av typ av brott och område skulle kunna göra att data kan jämföras mellan olika delar av världen och se hur olika brottsbekämpande åtgärder påverkar...\n"
+    "Större tydlighet av typ av brott och område skulle kunna göra att data kan jämföras mellan olika delar av världen och se hur olika brottsbekämpande åtgärder påverkar... \n",
+    "\n",
+    "**UPDATE** På Hack4Sweden hade jag en dialog med polisen och dom ser detta som ett problem och det finns vaga försök att ena med andra länder hur man rapporterar... \n",
+    "\n",
+    "**User Case** Genom att kunna klassificera områden på storlek befolkning, typ av område, social utsatthet etc... och matcha detta med insatser från samhället så borde det att tom i realtid kunna följa inrapporterade böcker från flera länder i världen i Realtid.... jmf tankarhur vetenskapliga priser skulle mha länkad data kunna användas för att utvärdera fop \n"
    ]
   },
   {
