--- a/polisen-se.ipynb
+++ b/polisen-se.ipynb
@@ -382,7 +382,7 @@
     "\n",
     "**UPDATE** På Hack4Sweden hade jag en dialog med polisen och dom ser detta som ett problem och det finns vaga försök att ena med andra länder hur man rapporterar... \n",
     "\n",
-    "**User Case** Genom att kunna klassificera områden på storlek befolkning, typ av område, social utsatthet etc... och matcha detta med insatser från samhället så borde det att tom i realtid kunna följa inrapporterade böcker från flera länder i världen i Realtid.... jmf tankarhur vetenskapliga priser skulle mha länkad data kunna användas för att utvärdera fop \n"
+    "**User Case** Genom att kunna klassificera områden på storlek befolkning, typ av område, social utsatthet etc... och matcha detta med insatser från samhället så borde det att tom i realtid kunna följa inrapporterade böcker från flera länder i världen i Realtid.... jmf tankarhur vetenskapliga priser skulle mha länkad data kunna användas för att utvärdera forskning i flera länder se [T216409](https://phabricator.wikimedia.org/T216409)  \n"
    ]
   },
   {
