--- a/Södertälje kommun Naturreservat.ipynb
+++ b/Södertälje kommun Naturreservat.ipynb
@@ -1,73 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/S%C3%B6dert%C3%A4lje_vapen.svg/1024px-S%C3%B6dert%C3%A4lje_vapen.svg.png\" width=100/>  \n",
+    "### Södertälje kommun \n",
+    "\n",
+    "se också [blogpost](http://minancestry.blogspot.com/2020/05/blog-post.html) \n",
+    "* anpassad [geojson](https://gist.githubusercontent.com/salgo60/31fd8d6fb4accfb7b4824ecf70986fae/raw/47901403ecd09d3da4bfc83ed2ce47b3372fa378/S%25C3%25B6dert%25C3%25A4ljeKommunNaturreservat.json')\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from shapely.geometry import Point, Polygon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POINT (0 0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "p1 = Point(0,0)\n",
-    "print(p1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(p1 == (0,0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.point.Point'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(p1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "polygon = Polygon([(0,0),(1,1),(1,0)])"
    ]
   },
   {
