--- a/Södertälje kommun Naturreservat.ipynb
+++ b/Södertälje kommun Naturreservat.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/S%C3%B6dert%C3%A4lje_vapen.svg/1024px-S%C3%B6dert%C3%A4lje_vapen.svg.png\" width=100/>  \n",
+    "<img src=\"./image/200px-Sodertaljevapen.png\" width=100/>  \n",
     "### Södertälje kommun \n",
     "\n",
     "se också [blogpost](http://minancestry.blogspot.com/2020/05/blog-post.html) \n",
