--- a/Diarie Linköpings kommun Riksdagen.ipynb
+++ b/Diarie Linköpings kommun Riksdagen.ipynb
@@ -5,21 +5,25 @@
    "metadata": {},
    "source": [
     "## Diarie Linköpings kommun\n",
-    "se https://www.linkoping.se/open/data/arende/\n"
+    "se https://www.linkoping.se/open/data/arende/ \n",
+    "\n",
+    "OBS unik nyckel måste begäras se [open](https://www.linkoping.se/open/)\n",
+    "\n",
+    "GITHUB [open-data-examples](https://github.com/salgo60/open-data-examples)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://arendedata.linkoping.se/api/v1/Cases?maxItemsInResult=1000&api_key=f3d212d2700f4c80aba7d2a88bc94529'"
+       "'http://arendedata.linkoping.se/api/v1/Cases?maxItemsInResult=1000&api_key=e4628c0b272a454f855ec3784b7b61a0'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,34 +32,28 @@
     "from IPython.display  import JSON\n",
     "import requests\n",
     "import json\n",
+    "key = \"e4628c0b272a454f855ec3784b7b61a0\"\n",
     "baseUrl = \"http://arendedata.linkoping.se/api/v1/\"\n",
-    "endpoint = \"Cases?maxItemsInResult=1000&api_key=f3d212d2700f4c80aba7d2a88bc94529\"\n",
+    "endpoint = \"Cases?maxItemsInResult=1000&api_key=\"\n",
     "headers = {'content-type': 'application/json'}\n",
-    "url = baseUrl + endpoint\n",
+    "url = baseUrl + endpoint + key\n",
     "url\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 6 columns):\n",
-      "caseNumber        1000 non-null object\n",
-      "subject           1000 non-null object\n",
-      "registeredDate    1000 non-null object\n",
-      "closedDate        107 non-null object\n",
-      "diary             1000 non-null object\n",
-      "hasEvents         1000 non-null bool\n",
-      "dtypes: bool(1), object(5)\n",
-      "memory usage: 40.2+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -63,24 +61,23 @@
     "data = json.loads(req.text)\n",
     "import pandas as pd\n",
     "df = pd.DataFrame(data)\n",
-    "df.head(n=40)\n",
-    "df.info()"
+    "df.head(n=40) \n",
+    "req"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline \n",
-    "df.set_index('registeredDate',inplace=True)"
+    "%matplotlib inline \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -106,134 +103,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>caseNumber</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>closedDate</th>\n",
-       "      <th>diary</th>\n",
-       "      <th>hasEvents</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>registeredDate</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-06-01T16:31:52.17</th>\n",
-       "      <td>KOF 2020-101</td>\n",
-       "      <td>Nämndinitiativ: Ökade resurser till föreningar...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>KOF 2020</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-06-01T14:29:00</th>\n",
-       "      <td>SON 2020-609</td>\n",
-       "      <td>IVO genomför en tillsyn vid Hagabergs HVB</td>\n",
-       "      <td>None</td>\n",
-       "      <td>SON 2020</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-06-01T14:28:00</th>\n",
-       "      <td>SON 2020-608</td>\n",
-       "      <td>Nytt ärende</td>\n",
-       "      <td>None</td>\n",
-       "      <td>SON 2020</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-06-01T14:24:09.25</th>\n",
-       "      <td>BIN 2020-391</td>\n",
-       "      <td>Skrivelse - Kollektivtrafiken inför skolstart ...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>BIN 2020</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-06-01T14:22:00</th>\n",
-       "      <td>ÄN 2020-405</td>\n",
-       "      <td>Lex Sarah Linghems vårdboende</td>\n",
-       "      <td>None</td>\n",
-       "      <td>ÄN 2020</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-06T11:12:00</th>\n",
-       "      <td>SBN 2020-270</td>\n",
-       "      <td>Trädgårdsföreningen - reflektioner</td>\n",
-       "      <td>None</td>\n",
-       "      <td>SBN 2020</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-06T10:05:00</th>\n",
-       "      <td>SON 2020-472</td>\n",
-       "      <td>Ersättning för extra personalinsatser i indivi...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>SON 2020</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-06T08:37:00</th>\n",
-       "      <td>KS 2020-319</td>\n",
-       "      <td>Kriminalvårdens föreskrifter och allmänna råd ...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>KS 2020</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-06T07:59:00</th>\n",
-       "      <td>SBN 2020-269</td>\n",
-       "      <td>Förfrågan att köpa loss tomt Galären 2</td>\n",
-       "      <td>None</td>\n",
-       "      <td>SBN 2020</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-06T07:55:34.493</th>\n",
-       "      <td>BOU 2020-350</td>\n",
-       "      <td>Förfrågan från lärarstuderande</td>\n",
-       "      <td>None</td>\n",
-       "      <td>BOU 2020</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           caseNumber                                            subject closedDate     diary  hasEvents\n",
-       "registeredDate                                                                                                          \n",
-       "2020-06-01T16:31:52.17   KOF 2020-101  Nämndinitiativ: Ökade resurser till föreningar...       None  KOF 2020       True\n",
-       "2020-06-01T14:29:00      SON 2020-609          IVO genomför en tillsyn vid Hagabergs HVB       None  SON 2020       True\n",
-       "2020-06-01T14:28:00      SON 2020-608                                        Nytt ärende       None  SON 2020      False\n",
-       "2020-06-01T14:24:09.25   BIN 2020-391  Skrivelse - Kollektivtrafiken inför skolstart ...       None  BIN 2020       True\n",
-       "2020-06-01T14:22:00       ÄN 2020-405                      Lex Sarah Linghems vårdboende       None   ÄN 2020       True\n",
-       "...                               ...                                                ...        ...       ...        ...\n",
-       "2020-04-06T11:12:00      SBN 2020-270                 Trädgårdsföreningen - reflektioner       None  SBN 2020       True\n",
-       "2020-04-06T10:05:00      SON 2020-472  Ersättning för extra personalinsatser i indivi...       None  SON 2020       True\n",
-       "2020-04-06T08:37:00       KS 2020-319  Kriminalvårdens föreskrifter och allmänna råd ...       None   KS 2020       True\n",
-       "2020-04-06T07:59:00      SBN 2020-269             Förfrågan att köpa loss tomt Galären 2       None  SBN 2020       True\n",
-       "2020-04-06T07:55:34.493  BOU 2020-350                     Förfrågan från lärarstuderande       None  BOU 2020       True\n",
-       "\n",
-       "[1000 rows x 5 columns]"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
