--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -6,7 +6,8 @@
    "source": [
     "## Utegym Stockholm \n",
     "* ÖDIS [Utegym Stockholm](https://smartstad.stockholm/2020/05/08/projekt-odis-efterfragar-oppna-data-om-utegym/) \n",
-    "* Utegym i Stockholms stad [cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd)"
+    "* Utegym i Stockholms stad [cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd)\n",
+    "* Blog [Utetr"
    ]
   },
   {
