--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -8,7 +8,8 @@
     "* Denna [GITHUB sida](https://github.com/salgo60/open-data-examples/blob/master/Utegym%20Stockholm%20.ipynb) \n",
     "* ÖDIS [Utegym Stockholm](https://smartstad.stockholm/2020/05/08/projekt-odis-efterfragar-oppna-data-om-utegym/) \n",
     "* Utegym i Stockholms stad [cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd)\n",
-    "* Blog [Utegrym övningar](http://minancestry.blogspot.com/2020/06/utetraning.html)"
+    "* Blog [Utegrym övningar](http://minancestry.blogspot.com/2020/06/utetraning.html)\n",
+    "* Wikidata stödjer [300 språk](https://www.wikidata.org/wiki/Help:Wikimedia_language_codes/lists/all) --> vi kan ha namn på utegymmen på de vanligaste språken i Sverige: Arabiska, Somaliska, Engelska, Finska, Sydsamiska, Lulesamiska...."
    ]
   },
   {
@@ -18,7 +19,8 @@
     "### TODO\n",
     "1. Ladda in i [Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE&t=6s)\n",
     "1. Lägga till objekt i [Open Street Map](https://www.youtube.com/watch?v=LRNl5tr2KEM)\n",
-    "1. Se om bilder från Stockholms stad är [CC-9](https://creativecommons.org/share-your-work/public-domain/cc0/) \"No riughts reserved se [tweet](https://twitter.com/salgo60/status/1269548094682796038?s=20)"
+    "1. Se om bilder från Stockholms stad är [CC-9](https://creativecommons.org/share-your-work/public-domain/cc0/) \"No riughts reserved se [tweet](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
+    "1. Använda verktyget [Tabernacle](https://tabernacle.toolforge.org/#/) för att ange namn på Stockholms utegym på flera språk"
    ]
   },
   {
