Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -18,9 +18,23 @@
    "source": [
     "### TODO\n",
     "1. Ladda in i [Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE&t=6s)\n",
+    "  1. Använder extrakt enligt nedan och sedan kopplar ihop det med Wikidata\n",
     "1. Lägga till objekt i [Open Street Map](https://www.youtube.com/watch?v=LRNl5tr2KEM)\n",
     "1. Se om bilder från Stockholms stad är [CC-9](https://creativecommons.org/share-your-work/public-domain/cc0/) \"No riughts reserved se [tweet](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
-    "1. Använda verktyget [Tabernacle](https://tabernacle.toolforge.org/#/) för att ange namn på Stockholms utegym på flera språk"
+    "1. Använda verktyget [Tabernacle](https://tabernacle.toolforge.org/#/) för att ange namn på Stockholms utegym på flera språk ex. de vanligaste språken i Stockholms kommun \n",
+    "  1. [Nationella minoriteter](https://start.stockholm/om-stockholms-stad/sa-arbetar-staden/nationella-minoriteter/) / [Wikipedia Minoritetsspråk i Sverige](https://sv.wikipedia.org/wiki/Minoritetsspr%C3%A5k_i_Sverige) --> språk  \n",
+    "     1. jiddisch --> språkkod [yi](https://sv.wikipedia.org/wiki/Jiddisch)  \n",
+    "     1. romani chib --> språkkod [rom](https://sv.wikipedia.org/wiki/Romani)\n",
+    "     1. samiska --> sydsamiska språkkod [sma](https://sv.wikipedia.org/wiki/Sydsamiska) / luleåsamiska språkkod [smj](https://sv.wikipedia.org/wiki/Lulesamiska)\n",
+    "     1. finska --> språkkod [fi](https://sv.wikipedia.org/wiki/Finska)\n",
+    "     1. meänkieli --> språkkod [fit](https://sv.wikipedia.org/wiki/Me%C3%A4nkieli)\n",
+    "  1. ISOG [Språken i Sverige](https://www.isof.se/om-oss/for-dig-i-skolan/sprak-for-dig-i-skolan/spraken-i-sverige.html) --> \n",
+    "     1. finska --> språkkod [fi](https://sv.wikipedia.org/wiki/Finska)\n",
+    "     1. bosniska-kroatiska-serbiska --> Bosniska språkkod [bs](https://sv.wikipedia.org/wiki/Bosniska) / Kroatiska språkkod [hr](https://sv.wikipedia.org/wiki/Kroatiska) /  Serbiska språkkod [sr](https://sv.wikipedia.org/wiki/Serbiska)\n",
+    "     1. arabiska --> språkkod [ar](https://sv.wikipedia.org/wiki/Arabiska)\n",
+    "     1. kurdiska --> språkkod [ku](https://sv.wikipedia.org/wiki/Kurdiska)\n",
+    "     1. spanska --> språkkod [es](https://sv.wikipedia.org/wiki/Spanska)\n",
+    "     1. persiska --> språkkod [fa](https://sv.wikipedia.org/wiki/Persiska)"
    ]
   },
   {
