Update Utegym Stockholm .ipynb

--- a/Utegym Stockholm .ipynb
+++ b/Utegym Stockholm .ipynb
@@ -38,6 +38,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Issues \n",
+    "1. [Text](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) \"Datamängden är temporär för projekt ÖDIS.\" vad innebär det? kommer den att försvinna?!?!? \n",
+    "  1. Bättre vore att ha datum då den upphörde och ha versionshantering av datat jmf Wikidata versioner av objektet för [Akalla Gårds utegym Q96105887](https://www.wikidata.org/w/index.php?title=Q96105887&action=history) \n",
+    "1. Bilder refereras i ett dataset som är [CC-0 (Creative Commons CC Zero)](http://creativecommons.org/publicdomain/zero/1.0/) vad har bilderna för copyright? Öppen data borde försöka ha bilder med tydlig copyright --> fråga skickad på [twitter](https://twitter.com/salgo60/status/1269548094682796038?s=20)\n",
+    "1. För att kunna referera ett dataset som källa behövs en tydlig identifierare. Idag känns datasettet ha en väldigt otydlig [persistent idengtifierare](https://en.wikipedia.org/wiki/Persistent_identifier) för datasettet är det [cf2effb7-8e1e-41ab-90b4-d09fd383f0fd](https://storsthlm.dataplatform.se/#/data/cf2effb7-8e1e-41ab-90b4-d09fd383f0fd) ? den borde finnas med under '''metadata''' \n",
+    "Bra dataset som skallanvändas måste vara enkla att kommunicera med och följa öppna frågor dvs. det är inte bara att ställa ut en kasse data och hoppas det blir bra jmf [Wikidata har unika issuenummer](https://phabricator.wikimedia.org/tag/wikidata/) för alla frågor och tydlighet när saker går i produktion plus du har en [publik backlog]((https://www.youtube.com/watch?v=502ILHjX9EE)) så du förstår prioriteringar ochkan planera ditt eget arbete...."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
